src/objects/File__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If an asset belongs to an innovation or repeatable model, it must be part of an asset group. If the file is related to an asset group, it is shown here.</description>
        <inlineHelpText>If an asset belongs to an innovation or repeatable model, it must be part of an asset group. If the file is related to an asset group, it is shown here.</inlineHelpText>
        <label>Asset Group</label>
        <referenceTo>Asset_Group__c</referenceTo>
        <relationshipLabel>Files</relationshipLabel>
        <relationshipName>Uploads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The related asset</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset__c</referenceTo>
        <relationshipLabel>Files</relationshipLabel>
        <relationshipName>Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Brand the file belongs to. Prepopulated depending on the source the file is created from.</description>
        <inlineHelpText>Brand the file belongs to. Prepopulated depending on the source the file is created from.</inlineHelpText>
        <label>Brand</label>
        <referenceTo>Brand_Master__c</referenceTo>
        <relationshipLabel>Files</relationshipLabel>
        <relationshipName>Files</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Category the asset belongs to. Prepopulated depending on the source the file is created from.</description>
        <inlineHelpText>Category the asset belongs to. Prepopulated depending on the source the file is created from.</inlineHelpText>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Files</relationshipLabel>
        <relationshipName>CategoryUploads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chatter_File_Id__c</fullName>
        <label>Chatter File Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_ID__c</fullName>
        <label>Feed ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Thumbnail_URL__c</fullName>
        <label>Feed Thumbnail URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_URL__c</fullName>
        <label>Feed URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Button_Text__c</fullName>
        <formula>IF(TEXT(Type__c) = &quot;Toolkit&quot;, &quot;VIEW&quot;, &quot;DOWNLOAD&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Button Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Size_Bytes__c</fullName>
        <label>File Size (Bytes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tickbox this if the file contains the image which should be used as the thumbnail representing the underlaying asset (if the file belongs to an asset).</description>
        <inlineHelpText>Tickbox this if the file contains the image which should be used as the thumbnail representing the underlaying asset (if the file belongs to an asset).</inlineHelpText>
        <label>Is Primary Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Download_Time__c</fullName>
        <label>Last Download Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Linked_to_Chatter__c</fullName>
        <formula>IMAGE( 
IF(
Feed_ID__c=&quot;&quot;, &quot;/img/samples/light_red.gif&quot;, &quot;/img/samples/light_green.gif&quot;), &quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Linked to Chatter?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Downloads__c</fullName>
        <label>Number Of Downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POS_File_Type__c</fullName>
        <description>The file relates to a category, brand, asset group or asset. The asset type information is copied from the origin.</description>
        <inlineHelpText>The file relates to a category, brand, asset group or asset. The asset type information is copied from the origin.</inlineHelpText>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Masterbrand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Store Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeatable Model</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Show_Artwork__c</fullName>
        <label>Show Artwork</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Download_Image__c</fullName>
        <label>Show Download Image</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Presentation__c</fullName>
        <label>Show Presentation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Production_Engineering__c</fullName>
        <label>Show Production Engineering</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>The order in which the files will be displayed in the WIN@POS user interface</description>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>The file type will determine which icon will be shown in the front-end to the user for this file.</description>
        <inlineHelpText>The file type will determine which icon will be shown in the front-end to the user for this file.</inlineHelpText>
        <label>File Type</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Artwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Download Image</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toolkit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>File</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Asset__c</columns>
        <columns>Brand__c</columns>
        <columns>Category__c</columns>
        <columns>Asset_Group__c</columns>
        <columns>Type__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>POS_File_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>When_Asset_Allow_No_Other_Lookup</fullName>
        <active>true</active>
        <description>A file record should only be linked to either an asset group, category, brand or asset. It cannot be linked to more than one of these at the same time.</description>
        <errorConditionFormula>IF(Asset__c=null, false, IF(OR(Asset_Group__c!=null,Category__c!=null,Brand__c!=null),true, false))</errorConditionFormula>
        <errorMessage>A file can be linked to no more than one of the following at the same time: Asset, Asset Group, Category and Brand‏</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>When_Asset_Group_Allow_No_Other_Lookup</fullName>
        <active>true</active>
        <description>A file record should only be linked to either an asset group, category, brand or asset. It cannot be linked to more than one of these at the same time.</description>
        <errorConditionFormula>IF(Asset_Group__c=null, false, IF(OR(Asset__c!=null,Category__c!=null,Brand__c!=null),true, false))</errorConditionFormula>
        <errorMessage>A file can be linked to no more than one of the following at the same time: Asset, Asset Group, Category and Brand‏</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>When_Brand_Allow_No_Other_Lookup</fullName>
        <active>true</active>
        <description>A file record should only be linked to either an asset group, category, brand or asset. It cannot be linked to more than one of these at the same time.</description>
        <errorConditionFormula>IF(Brand__c=null, false, IF(OR(Asset_Group__c!=null,Category__c!=null,Asset__c!=null),true, false))</errorConditionFormula>
        <errorMessage>A file can be linked to no more than one of the following at the same time: Asset, Asset Group, Category and Brand‏</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>When_Category_Allow_No_Other_Lookup</fullName>
        <active>true</active>
        <description>A file record should only be linked to either an asset group, category, brand or asset. It cannot be linked to more than one of these at the same time.</description>
        <errorConditionFormula>IF(Category__c=null, false, IF(OR(Asset_Group__c!=null,Brand__c!=null,Asset__c!=null),true, false))</errorConditionFormula>
        <errorMessage>A file can be linked to no more than one of the following at the same time: Asset, Asset Group, Category and Brand‏</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>When_Feed_ID_Not_Valid</fullName>
        <active>true</active>
        <description>Feed ID must be a valid Chatter feed ID</description>
        <errorConditionFormula>NOT(OR(Feed_ID__c = null, LEFT(Feed_ID__c, 3) = &quot;0D5&quot;))</errorConditionFormula>
        <errorDisplayField>Feed_ID__c</errorDisplayField>
        <errorMessage>The feed ID entered is not valid</errorMessage>
    </validationRules>
</CustomObject>